[package]
name = "codex_repair_gui"
version = "1.0.0"
edition = "2021"
build = "build.rs"
description = "Codex Desktop Bundled Plugin Repair Tool"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sysinfo = "0.33"
junction = "1.2"

[build-dependencies]
winresource = "0.1"





